// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser: Should alter test database with charset utf8 1`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "database": "test",
            "meta": [
              {
                "def": {
                  "charset": "utf8",
                },
                "id": "O_ALTER_DB_SPEC",
              },
            ],
          },
          "id": "P_ALTER_DB",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter test database with charset utf8 2`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "database": "test",
            "meta": [
              {
                "def": {
                  "charset": "utf8",
                },
                "id": "O_ALTER_DB_SPEC",
              },
            ],
          },
          "id": "P_ALTER_DB",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter test database with charset utf8 3`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "database": "test",
            "meta": [
              {
                "def": {
                  "charset": "utf8",
                },
                "id": "O_ALTER_DB_SPEC",
              },
            ],
          },
          "id": "P_ALTER_DB",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter test database with charset utf8 4`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "database": "test",
            "meta": [
              {
                "def": {
                  "charset": "utf8",
                },
                "id": "O_ALTER_DB_SPEC",
              },
            ],
          },
          "id": "P_ALTER_DB",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter test database with charset utf8 5`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "database": "test",
            "meta": [
              {
                "def": {
                  "charset": "utf8",
                },
                "id": "O_ALTER_DB_SPEC",
              },
            ],
          },
          "id": "P_ALTER_DB",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter test database with charset utf8 and collation utf8_general_ci 1`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "database": "test",
            "meta": [
              {
                "def": {
                  "charset": "utf8",
                },
                "id": "O_ALTER_DB_SPEC",
              },
              {
                "def": {
                  "collation": "utf8_general_ci",
                },
                "id": "O_ALTER_DB_SPEC",
              },
            ],
          },
          "id": "P_ALTER_DB",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter test database with collation utf8_general_ci 1`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "database": "test",
            "meta": [
              {
                "def": {
                  "collation": "utf8_general_ci",
                },
                "id": "O_ALTER_DB_SPEC",
              },
            ],
          },
          "id": "P_ALTER_DB",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter test database with collation utf8_general_ci 2`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "database": "test",
            "meta": [
              {
                "def": {
                  "collation": "utf8_general_ci",
                },
                "id": "O_ALTER_DB_SPEC",
              },
            ],
          },
          "id": "P_ALTER_DB",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter test database with collation utf8_general_ci 3`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "database": "test",
            "meta": [
              {
                "def": {
                  "collation": "utf8_general_ci",
                },
                "id": "O_ALTER_DB_SPEC",
              },
            ],
          },
          "id": "P_ALTER_DB",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should alter test database with collation utf8_general_ci 4`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "database": "test",
            "meta": [
              {
                "def": {
                  "collation": "utf8_general_ci",
                },
                "id": "O_ALTER_DB_SPEC",
              },
            ],
          },
          "id": "P_ALTER_DB",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should create test database even when having two collate options. 1`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "database": "test",
            "meta": [
              {
                "def": {
                  "collation": "utf8_cirylic_ci",
                },
                "id": "O_ALTER_DB_SPEC",
              },
              {
                "def": {
                  "charset": "utf8",
                },
                "id": "O_ALTER_DB_SPEC",
              },
              {
                "def": {
                  "collation": "utf8_general_ci",
                },
                "id": "O_ALTER_DB_SPEC",
              },
            ],
          },
          "id": "P_ALTER_DB",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;

exports[`Parser: Should create test database with collation utf8_general_ci and charset utf8 1`] = `
ParsedQuerySerializer {
  "parsed": {
    "def": [
      {
        "def": {
          "def": {
            "database": "test",
            "meta": [
              {
                "def": {
                  "collation": "utf8_general_ci",
                },
                "id": "O_ALTER_DB_SPEC",
              },
              {
                "def": {
                  "charset": "utf8",
                },
                "id": "O_ALTER_DB_SPEC",
              },
            ],
          },
          "id": "P_ALTER_DB",
        },
        "id": "P_DDS",
      },
    ],
    "id": "MAIN",
  },
}
`;
